--- a/sample-manifest.html.md.erb
+++ b/sample-manifest.html.md.erb
@@ -5,36 +5,20 @@ title: Sample BOSH Deployment Manifest
 The following is a sample BOSH deployment manifest. See [Understanding the BOSH Deployment Manifest](./deployment-manifest.html) for an explanation of the manifest contents.
 
 <pre class='terminal'>
-
 ---
-name: sample-errand
+name: sample-deployment
+
 director_uuid: 1234abcd-5678-efab-9012-3456cdef7890
 
 releases:
-- name: go_sample
-  version: latest
-
-compilation:
-  reuse_compilation_vms: true
-  workers: 2
-  network: default
-  cloud_properties:
-    instance_type: c1.medium
-    availability_zone: us-east-1c
-
-update:
-  canaries: 1
-  canary_watch_time: 30000-240000
-  update_watch_time: 30000-600000
-  max_in_flight: 3
+- {name: go_sample, version: latest}
 
 resource_pools:
 - name: default
-  stemcell:
-    name: bosh-aws-xen-centos
-    version: 2366
   network: default
-  size: 2
+  stemcell:
+    name: bosh-aws-xen-centos-go_agent
+    version: 2719
   cloud_properties:
     instance_type: m1.small
     availability_zone: us-east-1c
@@ -49,37 +33,43 @@ networks:
     - 10.10.0.16 - 10.10.0.18
     reserved:
     - 10.10.0.2 - 10.10.0.15
-    dns:
-    - 10.10.0.6
+    dns: [10.10.0.6]
     cloud_properties:
       subnet: subnet-d597b993
+
+compilation:
+  reuse_compilation_vms: true
+  workers: 2
+  network: default
+  cloud_properties:
+    instance_type: c1.medium
+    availability_zone: us-east-1c
+
+update:
+  canaries: 1
+  canary_watch_time: 15000-30000
+  update_watch_time: 15000-300000
+  max_in_flight: 3
 
 jobs:
 - name: sample
   templates:
-  - name: sample_with_properties
-    release: go_sample
+  - {name: sample_with_properties, release: go_sample}
   instances: 1
   resource_pool: default
   networks:
   - name: default
-    default: [dns, gateway]
   properties:
-    output_value: 'I am stdout'
-    error_value: 'I am stderr'
+    sample_with_properties:
+      output_value: 'Custom value'
 
 - name: sample_errand
   templates:
-  - name: sample_with_properties
-    release: sample
+  - {name: sample_with_properties, release: sample}
   instances: 1
   resource_pool: default
   networks:
   - name: default
-    default: [dns, gateway]
-  properties:
-    output_value: 'I am stdout'
-    error_value: 'I am stderr'
 
 properties:
   sample_with_properties:
